...
          padding: const EdgeInsets.symmetric(vertical: 40, horizontal: 10),
          child: SingleChildScrollView(
            child: Column(
              mainAxisAlignment: MainAxisAlignment.center,
              children: [
                const Text(
                  'Hi there! Welcome to Thuprai',
                  style: TextStyle(
                    fontSize: 15,
                  ),
                ),
                verticalSpaceLarge,
                BaseGestureDetector(
...
                const BaseHorizontalLine(
                  label: 'Or continue with email',
                  height: 100,
                ),
                BaseTextField(
                  controller: viewModel.fullNameController,
                  labelText: "Full Name",
                  obscureText: false,
                  validator: (value) => Validator.emailValidator(value),
                ),
                const SizedBox(height: 23),
                BaseTextField(
                  controller: viewModel.emailController,
...
